; ModuleID = '/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_malloc.c'
source_filename = "/home/carl/AnghaBench/kcp/extr_ikcp.c_ikcp_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @ikcp_malloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ikcp_malloc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  br i1 true, label %4, label %7

4:                                                ; preds = %1
  %5 = load i64, i64* %3, align 8
  %6 = call i8* @ikcp_malloc_hook(i64 %5)
  store i8* %6, i8** %2, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = call i8* @malloc(i64 %8)
  store i8* %9, i8** %2, align 8
  br label %10

10:                                               ; preds = %7, %4
  %11 = load i8*, i8** %2, align 8
  ret i8* %11
}

declare dso_local i8* @ikcp_malloc_hook(i64) #1

declare dso_local i8* @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
